--- a/Son/Son.csproj
+++ b/Son/Son.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Images\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
