--- a/Son/Son.csproj
+++ b/Son/Son.csproj
@@ -6,9 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Images\**" />
+    <Content Remove="Images\**" />
+    <EmbeddedResource Remove="Images\**" />
+    <None Remove="Images\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="Images\" />
-    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
