--- a/Son/bower.json
+++ b/Son/bower.json
@@ -3,10 +3,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "v4.1.3",
-    "jQuery": "3.3.1",
     "angular": "v1.7.2",
     "popper.js": "v1.14.3",
-    "Font-Awesome": "5.2.0"
+    "Font-Awesome": "5.2.0",
+    "jQuery": "3.3.1"
   },
   "resolutions": {
     "bootstrap": "v4.1.3"
